[gd_scene format=3 uid="uid://5l7vnntyrbuv"]

[ext_resource type="Script" uid="uid://moqtmqronbe7" path="res://Skripts/Upgrade_Gambling.gd" id="1_0dl12"]
[ext_resource type="AudioStream" uid="uid://cy1jivn24jjwk" path="res://Sounds/Death_bomb.mp3" id="2_ousv6"]

[node name="Adding_Cards" type="Node2D" unique_id=1380721097]

[node name="Card" type="Node2D" parent="." unique_id=561863995]
script = ExtResource("1_0dl12")

[node name="Health" type="RichTextLabel" parent="Card" unique_id=1452792584]
offset_left = 73.0
offset_top = 400.0
offset_right = 519.0
offset_bottom = 555.0
theme_override_colors/default_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/normal_font_size = 80
text = "Health OP"

[node name="Points" type="RichTextLabel" parent="Card" unique_id=1489367614]
offset_left = 1354.0
offset_top = 400.0
offset_right = 1874.0
offset_bottom = 555.0
theme_override_colors/default_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Points: 0"

[node name="Hearts" type="RichTextLabel" parent="Card" unique_id=714131681]
offset_left = 86.0
offset_top = 528.0
offset_right = 458.0
offset_bottom = 990.0
theme_override_colors/default_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Health"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Card" unique_id=795017081]
offset_left = 550.0
offset_top = 50.0
offset_right = 1300.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/font_size = 50
text = "Random Unit gets Multi (3)
But Enemy doubles Health"

[node name="Button2" type="Button" parent="Card" unique_id=606962802]
offset_left = 550.0
offset_top = 300.0
offset_right = 1300.0
offset_bottom = 499.99957
theme_override_colors/font_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/font_size = 50
text = "Gain 1 Point (0)
Loose Game 5% Chance
"

[node name="Button3" type="Button" parent="Card" unique_id=325381450]
offset_left = 550.0
offset_top = 550.0
offset_right = 1300.0
offset_bottom = 750.0
theme_override_colors/font_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/font_size = 50
text = "Cost of 2 Cards -1 (3)"

[node name="Button4" type="Button" parent="Card" unique_id=236008630]
offset_left = 550.0
offset_top = 800.0
offset_right = 1300.0
offset_bottom = 1000.0
theme_override_colors/font_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/font_size = 50
text = "Random Exodia (10)"

[node name="Button" type="Button" parent="." unique_id=703293873]
offset_left = 1363.0
offset_top = 665.0
offset_right = 1831.0
offset_bottom = 866.0
theme_override_colors/font_color = Color(1, 0.056370765, 0.8759815, 1)
theme_override_font_sizes/font_size = 40
text = "Continue (keep points)"
text_overrun_behavior = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=152017472]
stream = ExtResource("2_ousv6")

[connection signal="pressed" from="Card/Button1" to="Card" method="Button1"]
[connection signal="pressed" from="Card/Button2" to="Card" method="Button2"]
[connection signal="pressed" from="Card/Button3" to="Card" method="Button3"]
[connection signal="pressed" from="Card/Button4" to="Card" method="Button4"]
[connection signal="pressed" from="Button" to="Card" method="Continue_Button"]
